<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent">
  <include layout="@layout/toolbar"/>
  <LinearLayout
      android:id="@+id/titleLayout"
      android:layout_marginLeft="@dimen/margin_small"
      android:layout_marginRight="@dimen/margin_small"
      android:layout_marginTop="@dimen/margin_default"
      android:background="@drawable/background"
      android:layout_width="match_parent"
      android:layout_below="@+id/toolbar"
      android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/city"
        android:id="@+id/city"
        android:textColor="@color/fr_white"
        android:textSize="@dimen/font_tiny"
        android:layout_margin="@dimen/margin_small"
        android:layout_height="wrap_content"/>
  </LinearLayout>
  <TextView
      android:id="@+id/today"
      android:layout_width="wrap_content"
      android:text="@string/today_example"
      android:textSize="@dimen/font_tiny"
      android:textColor="@color/fr_white"
      android:layout_below="@+id/titleLayout"
      android:layout_marginLeft="@dimen/margin_default"
      android:layout_marginTop="15dp"
      android:layout_marginRight="@dimen/margin_default"
      android:layout_height="wrap_content"/>
  <TextView
      android:id="@+id/local"
      android:layout_width="wrap_content"
      android:text="@string/local_example"
      android:textSize="@dimen/font_large"
      android:textColor="@color/fr_white"
      android:layout_below="@+id/today"
      android:layout_marginLeft="@dimen/margin_default"
      android:layout_marginTop="@dimen/margin_tiny"
      android:layout_marginRight="@dimen/margin_default"
      android:layout_height="wrap_content"/>
  <fragment xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:map="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:layout_margin="@dimen/margin_small"
      android:layout_below="@+id/local"
      android:id="@+id/map"
      tools:context="com.github.pierry.farmaplantaoconcordia.MapsActivity"
      android:name="com.google.android.gms.maps.SupportMapFragment"/>
  <TextView
      android:id="@+id/street"
      android:layout_width="wrap_content"
      android:text="@string/street_example"
      android:textColor="@color/fr_white"
      android:layout_below="@+id/map"
      android:layout_marginLeft="@dimen/margin_default"
      android:layout_marginTop="@dimen/margin_tiny"
      android:layout_marginRight="@dimen/margin_default"
      android:layout_height="wrap_content"/>
  <Button
      android:id="@+id/navigate"
      android:text="@string/navigate"
      android:layout_margin="@dimen/margin_default"
      android:background="@drawable/button"
      android:layout_below="@+id/street"
      android:textColor="@color/blue_dark"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
</RelativeLayout>